# tsmom_carry

./: .gitignore  Makefile  README.md  data_loader.py  pyproject.toml  requirements.txt
data/processed/: continuous_returns.parquet  continuous_returns_upd.parquet  ewma_vol.parquet  garch_vol.parquet
notebooks/: 01_data_intake.ipynb  02_term_structure.ipynb  03_data_analysis.ipynb  04_signal_generation.ipynb  05_volatility_calculation.ipynb  06_backtest_and_robustness.ipynb  07_portfolio_construction.ipynb
src/: analysis.py  backtest.py  cleaning.py  config.py  download.py  portfolio.py  process_dataset.py  signals.py  term_structure.py  vol.py
src/tsmom_carry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cleaning.py  test_download.py  test_process.py
